Fix button spacing on the Course Upgrade Step

--- a/assets/admin/editor-wizard/style.scss
+++ b/assets/admin/editor-wizard/style.scss
@@ -93,4 +93,9 @@
 			color: #00998b;
 		}
 	}
+
+	&__button {
+		margin-left: 12px;
+		padding: 18px 30px;
+	}
 }
